--- a/codePractice/c++practice/c++practice.vcxproj
+++ b/codePractice/c++practice/c++practice.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Chapter01\chapter01.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chapter01\chapter01.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
